[gd_scene load_steps=11 format=2]

[ext_resource path="res://entities/random_sprite_3d.gd" type="Script" id=1]
[ext_resource path="res://assets/textures/eyeball.png" type="Texture" id=2]

[sub_resource type="SpatialMaterial" id=7]
flags_transparent = true
params_cull_mode = 2

[sub_resource type="PlaneMesh" id=1]
material = SubResource( 7 )
size = Vector2( 2, 4 )

[sub_resource type="SpatialMaterial" id=8]
flags_transparent = true
params_cull_mode = 2

[sub_resource type="PlaneMesh" id=2]
material = SubResource( 8 )

[sub_resource type="SpatialMaterial" id=5]
render_priority = 1
flags_transparent = true
albedo_texture = ExtResource( 2 )

[sub_resource type="PlaneMesh" id=3]
material = SubResource( 5 )
size = Vector2( 1, 1 )

[sub_resource type="SpatialMaterial" id=6]
render_priority = 1
flags_transparent = true
albedo_texture = ExtResource( 2 )

[sub_resource type="PlaneMesh" id=4]
material = SubResource( 6 )
size = Vector2( 1, 1 )

[node name="RandomSprite3D" type="Spatial"]
script = ExtResource( 1 )

[node name="BodyMaterial" type="MeshInstance" parent="."]
transform = Transform( 1, 0, 0, 0, -1.62921e-07, -1, 0, 1, -1.62921e-07, 0, -1, 0 )
mesh = SubResource( 1 )
material/0 = null

[node name="HeadMaterial" type="MeshInstance" parent="."]
transform = Transform( 1, 0, 0, 0, -1.62921e-07, -1, 0, 1, -1.62921e-07, 0, 2, 0 )
mesh = SubResource( 2 )
material/0 = null

[node name="EyeballMaterial1" type="MeshInstance" parent="."]
transform = Transform( 1, 0, 0, 0, -1.62921e-07, -1, 0, 1, -1.62921e-07, -0.5, 2, 0 )
mesh = SubResource( 3 )
material/0 = null

[node name="EyeballMaterial2" type="MeshInstance" parent="."]
transform = Transform( 1, 0, 0, 0, -1.62921e-07, -1, 0, 1, -1.62921e-07, 0.5, 2, 0 )
mesh = SubResource( 4 )
material/0 = null
